[FIX] Truncating text for smaller screens

--- a/frontend/src/CSS/App.css
+++ b/frontend/src/CSS/App.css
@@ -452,7 +452,7 @@ height: calc(100% - 73px);
   .truncate-text {
     display: inline-block;
     white-space: nowrap;
-    overflow: hidden;
+    /* overflow: hidden; */
     text-overflow: ellipsis;
 
     max-width: 6ch; 
